--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -831,6 +831,7 @@
     <string name="clear_database_source_item_count">%1$d non-library manga in database</string>
     <string name="clear_database_summary">Delete manga and chapters that are not in your library</string>
     <string name="clear_database_confirmation">Are you sure? Read chapters and progress of non-library manga will be lost</string>
+    <string name="clear_db_exclude_read">Keep manga with read chapters</string>
     <string name="clear_database_completed">Entries deleted</string>
     <string name="database_clean">Database clean</string>
     <string name="refresh_library_metadata">Refresh library metadata</string>
